--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Testing Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Austin's Portfolio</title>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+	<script src="bootstrap/js/bootstrap.js"></script>
+</head>
+<body>
+	<h1 class="text-center">Austin Grant</h1>
+</body>
+</html>
