--- a/index.html
+++ b/index.html
@@ -3,11 +3,353 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Austin's Portfolio</title>
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-	<script src="bootstrap/js/bootstrap.js"></script>
+	<title>Austin Grant | Portfolio</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<style>
+		/* Basic Reset */
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		body {
+			font-family: 'Roboto', sans-serif;
+			background-color: #121212;
+			color: #f4f4f4;
+		}
+
+		/* Smooth Scroll */
+		html {
+			scroll-behavior: smooth;
+		}
+
+		/* Navbar Styles */
+		nav {
+			background-color: #222222;
+			position: fixed;
+			top: 0;
+			width: 100%;
+			padding: 15px 0;
+			z-index: 100;
+		}
+
+		nav a {
+			color: #fff;
+			font-size: 1.2rem;
+			margin: 0 20px;
+			text-decoration: none;
+		}
+
+		nav a:hover {
+			color: #00d2ff;
+		}
+
+		.navbar {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		/* Hero Section */
+		.hero {
+			height: 100vh;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			background: linear-gradient(135deg, #00d2ff, #00a1a1);
+			text-align: center;
+			padding: 0 20px;
+		}
+
+		.hero h1 {
+			font-size: 4rem;
+			font-weight: bold;
+			color: white;
+		}
+
+		.hero p {
+			font-size: 1.3rem;
+			color: #f4f4f4;
+		}
+
+		.cta-btn {
+			background-color: #00d2ff;
+			padding: 12px 30px;
+			border-radius: 30px;
+			color: #fff;
+			font-size: 1.1rem;
+			margin-top: 20px;
+			text-decoration: none;
+		}
+
+		.cta-btn:hover {
+			background-color: #00a1a1;
+		}
+
+		/* Section Styles */
+		section {
+			padding: 100px 0;
+		}
+
+		h2 {
+			font-size: 2.5rem;
+			margin-bottom: 20px;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			color: #00d2ff;
+		}
+
+		.content-container {
+			max-width: 1200px;
+			margin: 0 auto;
+			padding: 0 20px;
+		}
+
+		.content-container p {
+			font-size: 1.1rem;
+			line-height: 1.7;
+		}
+
+		.project {
+			background: #1e1e1e;
+			border-radius: 10px;
+			padding: 20px;
+			text-align: center;
+			flex: 1 0 calc(33.33% - 20px); /* 3 projects per row */
+			margin-bottom: 30px;
+			box-sizing: border-box;
+		}
+
+		.project img {
+			max-width: 100%;
+			border-radius: 10px;
+			margin-bottom: 20px;
+		}
+
+		.project h3 {
+			font-size: 1.8rem;
+			margin-bottom: 10px;
+		}
+
+		.project p {
+			font-size: 1rem;
+			color: #f4f4f4;
+			padding-bottom: 15px;
+		}
+
+		.project .btn-project {
+			background-color: #00d2ff;
+			padding: 10px 20px;
+			color: #fff;
+			text-decoration: none;
+			border-radius: 25px;
+			margin-top: 15px;
+		}
+
+		.project .btn-project:hover {
+			background-color: #00a1a1;
+		}
+
+		/* Footer */
+		footer {
+			background-color: #222222;
+			padding: 30px 0;
+			text-align: center;
+			color: #fff;
+		}
+
+		footer p {
+			font-size: 1rem;
+		}
+
+		/* Projects Section */
+		#projects .content-container .content-container {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			gap: 20px;
+		}
+
+		/* Make it responsive for smaller screens */
+		@media (max-width: 768px) {
+			.project {
+				flex: 1 0 calc(50% - 20px); /* 2 projects per row on tablets */
+			}
+		}
+
+		@media (max-width: 480px) {
+			.project {
+				flex: 1 0 100%; /* 1 project per row on mobile */
+			}
+		}
+	</style>
 </head>
 <body>
-	<h1 class="text-center">Austin Grant</h1>
+
+	<!-- Navbar -->
+	<nav>
+		<div class="navbar">
+			<a href="#hero">Home</a>
+			<a href="#about">About</a>
+			<a href="#skills">Skills</a>
+			<a href="#projects">Projects</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</nav>
+
+	<!-- Hero Section -->
+	<section id="hero" class="hero">
+		<h1>Austin Grant</h1>
+		<p>Web & Mobile Developer | Empowering Brands with Modern Solutions</p>
+		<!-- <p>Full Stack Developer | Web & Mobile | Creative Technologist</p> -->
+		<a href="#projects" class="cta-btn">View My Work</a>
+	</section>
+
+	<!-- About Section -->
+	<section id="about" class="section">
+		<div class="content-container">
+			<h2>About Me</h2>
+			<p>Hi! I'm Austin, a self-taught web and mobile developer with a passion for technology and problem-solving. I specialize in building responsive, interactive websites and applications. With a strong background in front-end and back-end development, I'm always excited to work on projects that push the boundaries of creativity and functionality.</p>
+		</div>
+	</section>
+
+	<!-- Skills Section -->
+	<section id="skills" class="section" style="background-color: #2a2a2a;">
+		<div class="content-container">
+			<h2>Skills</h2>
+			<p>With a solid foundation in modern web development, here are some of the technologies I'm proficient in:</p>
+			<div class="content-container">
+				<div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin-top: 20px;">
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-html5 fa-3x" style="color: #e34f26;"></i>
+						<p>HTML</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-css3-alt fa-3x" style="color: #264de4;"></i>
+						<p>CSS</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-js-square fa-3x" style="color: #f0db4f;"></i>
+						<p>JavaScript</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-react fa-3x" style="color: #61dbfb;"></i>
+						<p>React</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-node fa-3x" style="color: #8cc84b;"></i>
+						<p>Node.js</p>
+					</div>
+				</div>
+				<div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin-top: 20px;">
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-laravel fa-3x" style="color: #f05340;"></i>
+						<p>Laravel</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-php fa-3x" style="color: #777bb3;"></i>
+						<p>PHP</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-python fa-3x" style="color: #4b8bb3;"></i>
+						<p>Python</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-java fa-3x" style="color: #f8981d;"></i>
+						<p>Java</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-vuejs fa-3x" style="color: #42b883;"></i>
+						<p>Vue.js</p>
+					</div>
+				</div>
+				<div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin-top: 20px;">
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-wordpress fa-3x" style="color: #21759b;"></i>
+						<p>WordPress</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fab fa-drupal fa-3x" style="color: #0077b5;"></i>
+						<p>Drupal</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fas fa-database fa-3x" style="color: #f39c12;"></i>
+						<p>MySQL</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fas fa-cogs fa-3x" style="color: #7f8c8d;"></i>
+						<p>Database Management</p>
+					</div>
+					<div style="flex: 1 0 20%; text-align: center;">
+						<i class="fas fa-plug fa-3x" style="color: #e67e22;"></i>
+						<p>API Integration</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Projects Section -->
+	<section id="projects" class="section">
+		<div class="content-container">
+			<h2>Featured Projects</h2>
+			<div class="content-container">
+				<div class="project">
+					<!-- <img src="https://via.placeholder.com/600x300" alt="Project 1"> -->
+					<h3>eNetworks Dashboard</h3>
+					<p>Data management and monitoring platform for network management.</p>
+					<!-- <a href="#" class="btn-project">View Project</a> -->
+				</div>
+				<div class="project">
+					<!-- <img src="https://via.placeholder.com/600x300" alt="Project 2"> -->
+					<h3>Mr Price Support Dashboard</h3>
+					<p>Task management system for internal use.</p>
+					<!-- <a href="#" class="btn-project">View Project</a> -->
+				</div>
+				<div class="project">
+					<!-- <img src="https://via.placeholder.com/600x300" alt="Project 3"> -->
+					<h3>Standard Bank eCommerce</h3>
+					<p>Scalable and secure online shopping platform for bank customers.</p>
+					<!-- <a href="#" class="btn-project">View Project</a> -->
+				</div>
+				<div class="project">
+					<!-- <img src="https://via.placeholder.com/600x300" alt="Project 4"> -->
+					<h3>Art Gazette eCommerce</h3>
+					<p>eCommerce platform for art sales and distribution.</p>
+					<!-- <a href="#" class="btn-project">View Project</a> -->
+				</div>
+				<div class="project">
+					<!-- <img src="https://via.placeholder.com/600x300" alt="Project 5"> -->
+					<h3>CRFund Retirement App</h3>
+					<p>Retirement planning application with client support features.</p>
+					<!-- <a href="#" class="btn-project">View Project</a> -->
+				</div>
+				<div class="project">
+					<!-- <img src="https://via.placeholder.com/600x300" alt="Project 6"> -->
+					<h3>Task Manager App</h3>
+					<p>Internal project management tool allowing task creation and commenting.</p>
+					<!-- <a href="#" class="btn-project">View Project</a> -->
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Contact Section -->
+	<section id="contact" class="section" style="background-color: #1e1e1e;">
+		<div class="content-container">
+			<h2>Contact Me</h2>
+			<p>Email me at <a href="mailto:agrantdeveloper@gmail.com" style="color: #00d2ff;">agrantdeveloper@gmail.com</a></p>
+			<p>Phone: 072 288 1923</p>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer>
+		<p>&copy; 2025 Austin Grant | All Rights Reserved</p>
+	</footer>
+
 </body>
 </html>
