--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Austin Grant | Portfolio</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		/* Basic Reset */
 		* {
@@ -48,8 +49,8 @@
 
 		.navbar {
 			display: flex;
-			justify-content: center;
 			align-items: center;
+			padding-left: 15px;
 		}
 
 		/* Hero Section */
@@ -174,6 +175,13 @@
 		}
 
 		/* Make it responsive for smaller screens */
+		@media (min-width: 992px) { /* Apply this to desktop or larger screens */
+			.navbar-nav {
+				justify-content: space-evenly;
+				width: 100%;
+			}
+		}
+
 		@media (max-width: 768px) {
 			.project {
 				flex: 1 0 calc(50% - 20px); /* 2 projects per row on tablets */
@@ -190,13 +198,28 @@
 <body>
 
 	<!-- Navbar -->
-	<nav>
-		<div class="navbar">
-			<a href="#hero">Home</a>
-			<a href="#about">About</a>
-			<a href="#skills">Skills</a>
-			<a href="#projects">Projects</a>
-			<a href="#contact">Contact</a>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ms-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#hero">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#about">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#skills">Skills</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#projects">Projects</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#contact">Contact</a>
+				</li>
+			</ul>
 		</div>
 	</nav>
 
@@ -350,6 +373,8 @@
 	<footer>
 		<p>&copy; 2025 Austin Grant | All Rights Reserved</p>
 	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
