--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 					<a href="#projects" class="cta-btn">View My Work</a>
 				</div>
 				<div class="col-12 col-md-6 pt-5">
-					<a target="_blank" href="austin-cv.pdf" class="cta-btn-cv">View My CV</a>
+					<a target="_blank" href="austin-cv.html" class="cta-btn-cv">View My CV</a>
 				</div>
 			</div>
 		</div>
